@@ -1,4 +1,4 @@
-.TH VNSTAT.CONF 5 "FEBRUARY 2017" "version 1.17" "User Manuals"
+.TH VNSTAT.CONF 5 "FEBRUARY 2018" "version 1.18" "User Manuals"
 .SH NAME
 
 vnstat.conf \- vnStat configuration file
