@@ -1,4 +1,4 @@
-.TH VNSTATD 1 "FEBRUARY 2017" "version 1.17" "User Manuals"
+.TH VNSTATD 1 "FEBRUARY 2018" "version 1.18" "User Manuals"
 .SH NAME
 
 vnstatd \- daemon based database updating for vnStat
