@@ -1,4 +1,4 @@
-.TH VNSTATI 1 "FEBRUARY 2017" "version 1.17" "User Manuals"
+.TH VNSTATI 1 "FEBRUARY 2018" "version 1.18" "User Manuals"
 .SH NAME
 
 vnstati \- png image output support for vnStat
